# layers-insight

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  ROADMAP.md  app.py  cache.py  callbacks.py  colors.py  comparison.py  config_io.py  evaluate_expr.py  factorio_filter.py  known_ops.py  layout.py  logger.py  main.py  metrics.py  modal_test.py  openvino_graph.py  package-lock.json  package.json  partial_inference.py  preprocess.py  pyproject.toml  requirements.txt  run.py  run.sh  run_inference.py  setup.py  setup.sh  start.py  start.sh  visualization.py  visualization2.py  visualizations.py  viz_bin_diff.py
assets/: center.js  overlays.js  splitter.css  splitter.js  styles.css
backend/: certs.py  config.py  main.py
backend/routers/: bisect.py  devices.py  graph.py  inference.py  sessions.py  tensors.py  uploads.py
backend/schemas/: bisect.py  graph.py  inference.py  session.py
backend/services/: bisect_service.py  graph_service.py  inference_service.py  model_cut_service.py  queue_service.py  session_service.py  upload_service.py
backend/utils/: __init__.py  block_detection.py  block_layout.py  dag_layout.py  dag_regions.py  elk_layout.js  graph_utils.py  ov_helpers.py  (+6 more)
docs/: tasks.md
factorio_selector/: evaluate_expr.py  factorio_selector.py
frontend/: bench.html  index.html  package-lock.json  package.json  perf.html  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
templates/: index.html
tests/: conftest.py  test_bisect.py  test_graph_utils.py
visualizations/: new_cool_visualizations.py  visualization.py  viz_bin_diff.py
(+138 files in other folders)
