[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "layers-insight"
version = "0.1.0"
description = "Neural network graph debugger for OpenVINO inference accuracy"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "openvino>=2023.2",
    "numpy>=1.24",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "websockets>=12.0",
    "Pillow>=10.0",
    "cryptography>=3.4",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "httpx>=0.25",
]

[tool.setuptools.packages.find]
include = ["backend*"]
